sfdx-source/force-app/main/default/objects/Opportunity/fields/Lost_Reason_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Additional_Notes__c</fullName>
    <description>LEM-143: Estimated number of stores to which this deal will apply.
LEM-420: Including Stalled</description>
    <label>Lost / Stalled Reason Additional Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>