sfdx-source/force-app/main/default/objects/Opportunity/fields/Lost_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Details__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Lost Reason Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lost_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Grub Hub</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Info</fullName>
            </value>
            <value>
                <fullName>Kitchen at Capacity</fullName>
            </value>
            <value>
                <fullName>Mx Out of Business</fullName>
            </value>
            <value>
                <fullName>No Interest in 3rd Party Delivery</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out of Coverage</fullName>
            </value>
            <value>
                <fullName>POS Integration</fullName>
            </value>
            <value>
                <fullName>Postmates</fullName>
            </value>
            <value>
                <fullName>Delivery Pricing</fullName>
            </value>
            <value>
                <fullName>Seamless</fullName>
            </value>
            <value>
                <fullName>Skip the Dishes</fullName>
            </value>
            <value>
                <fullName>Uber Eats</fullName>
            </value>
            <value>
                <fullName>Undergoing new menu</fullName>
            </value>
            <value>
                <fullName>Do not buy into incrementality</fullName>
            </value>
            <value>
                <fullName>Not a restaurant</fullName>
            </value>
            <value>
                <fullName>Current DoorDash partner</fullName>
            </value>
            <value>
                <fullName>Blocked by gatekeeper</fullName>
            </value>
            <value>
                <fullName>Will not return calls after 7+ attempts</fullName>
            </value>
            <value>
                <fullName>Preferred Language: Spanish</fullName>
            </value>
            <value>
                <fullName>Preferred Language: Mandarin</fullName>
            </value>
            <value>
                <fullName>Preferred Language: Vietnamese</fullName>
            </value>
            <value>
                <fullName>Preferred Language: Tagalog</fullName>
            </value>
            <value>
                <fullName>Preferred Language: French</fullName>
            </value>
            <value>
                <fullName>Preferred Language: Unknown</fullName>
            </value>
            <value>
                <fullName>Preferred Language: Other</fullName>
            </value>
            <value>
                <fullName>Signed up without consent</fullName>
            </value>
            <value>
                <fullName>Unprofessional drivers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>