sfdx-source/force-app/main/default/objects/Opportunity/fields/Marketplace_Nintex_Id__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Nintex_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2272: This field stores the workflow instance and also serves as identifier of the source that created the opportunity.</description>
    <label>Marketplace Nintex Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>