sfdx-source/force-app/main/default/objects/Opportunity/fields/Medal_Rank__c.field-meta.xml
<CustomField>
    <fullName>Medal_Rank__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14100: It represents the Medal Rank of the associated Account.</description>
    <formula>TEXT(Account.Medal_Rank__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Medal Rank</label>
    <type>Text</type>
</CustomField>