sfdx-source/force-app/main/default/objects/Opportunity/fields/Medal_Rank_At_Closed_Stage__c.field-meta.xml
<CustomField>
    <fullName>Medal_Rank_At_Closed_Stage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14100: It represents the Medal Rank of the associated Account when Opportunity is Closed.</description>
    <label>Medal Rank At Closed Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medal_Rank_Values</valueSetName>
    </valueSet>
</CustomField>