sfdx-source/force-app/main/default/objects/Opportunity/fields/Meeting_Set__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Set__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14733: It represents upcoming meeting Date &amp; Time set with the Opportunity.</description>
    <inlineHelpText>Upcoming meeting Date &amp; Time set with the Opportunity</inlineHelpText>
    <label>Meeting Set</label>
    <type>DateTime</type>
</CustomField>