sfdx-source/force-app/main/default/objects/Opportunity/fields/MP_Bz_Id__c.field-meta.xml
<CustomField>
    <fullName>MP_Bz_Id__c</fullName>
    <description>LEM-9127: It indicates the Marketplace Business Id which will be used for Drive Withholding.</description>
    <inlineHelpText>This field indicates the Marketplace Business Id that will be used for Drive Withholding</inlineHelpText>
    <label>MP Bz Id</label>
    <type>TextArea</type>
</CustomField>