sfdx-source/force-app/main/default/objects/Opportunity/fields/Mx_Tag_Associations_Concatenated__c.field-meta.xml
<CustomField>
    <fullName>Mx_Tag_Associations_Concatenated__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18923: It stores the concatenated Mx Tag Names.</description>
    <label>Mx Tag Associations - Concatenated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>