sfdx-source/force-app/main/default/objects/Opportunity/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13561: It is used to represent the Date by when the Next Step should be completed.</description>
    <inlineHelpText>Date by when the Next Step should be completed.</inlineHelpText>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>