sfdx-source/force-app/main/default/objects/Opportunity/fields/Nintex_Id__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2272: This field represents the Nintex Id to identify the opportunity created via Nintex.</description>
    <label>Nintex Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>