sfdx-source/force-app/main/default/objects/Opportunity/fields/Nintex_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-2294: Nintex Signatory captures the Contact that signed the Nintex Form</description>
    <label>Nintex Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>