sfdx-source/force-app/main/default/objects/Opportunity/fields/Nintex_URL__c.field-meta.xml
<CustomField>
    <fullName>Nintex_URL__c</fullName>
    <description>LEM-2350: This field will be used to capture the PDF URL coming from Nintex.</description>
    <label>Nintex URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>