sfdx-source/force-app/main/default/objects/Opportunity/fields/Nintex_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Use_Case__c</fullName>
    <description>LEM-2294: Captures the Nintex Use Case that resulted in the Opportunity Creation</description>
    <label>Nintex Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nintex_Use_Cases</valueSetName>
    </valueSet>
</CustomField>