sfdx-source/force-app/main/default/objects/Opportunity/fields/OCR_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>OCR_Email_Id__c</fullName>
    <description>LEM-3023: The Email Id of Decision Maker for OCR Creation/</description>
    <label>OCR Email Id</label>
    <type>Email</type>
</CustomField>