sfdx-source/force-app/main/default/objects/Opportunity/fields/Opportunity_Contract_URL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contract_URL__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-23683: It is used to generate Opportunity or Contract URL based on Opportunity Type.</description>
    <formula>IF(
  TEXT(Type) = $Label.Opportunity_Type_New,
  HYPERLINK(LEFT($Api.Enterprise_Server_URL_540, FIND($CustomMetadata.Static_Configurations__mdt.Enterprise_Server_URL_Search_Key.Configuration_Value__c, $Api.Enterprise_Server_URL_540, 0) - 1) +  Id , $Label.Opportunity_Object),
  HYPERLINK(LEFT($Api.Enterprise_Server_URL_540, FIND($CustomMetadata.Static_Configurations__mdt.Enterprise_Server_URL_Search_Key.Configuration_Value__c, $Api.Enterprise_Server_URL_540, 0) - 1) +  ContractId , $Label.Contract_Object)
)</formula>
    <label>Opportunity/Contract URL</label>
    <type>Text</type>
</CustomField>