sfdx-source/force-app/main/default/objects/Opportunity/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-21113: It is a formula field to show the Opportunity Owner name.</description>
    <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>