sfdx-source/force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Sales_Team__c</fullName>
    <description>LEM-11238: It indicates the sales team of opportunity’s owner. It is primarily utilized for filtering/grouping in the adoption reports and dashboards</description>
    <formula>Owner.Sales_Team__c</formula>
    <label>Sales Team</label>
    <type>Text</type>
</CustomField>