sfdx-source/force-app/main/default/objects/Opportunity/fields/Opportunity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Type__c</fullName>
    <description>LEM-78: This field indicates the sub-type based on the selected Opportunity Type.</description>
    <inlineHelpText>Indicates sub-type based on selected Opportunity type</inlineHelpText>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Former Partner</fullName>
            </value>
            <value>
                <fullName>Net New Partner</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Ads &amp; Promos</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Rescue</fullName>
            </value>
            <value>
                <fullName>Contract Correction</fullName>
                <label>Contract Correction - New</label>
            </value>
            <value>
                <fullName>Contract Correction - Amendment</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>New Store Expansion</fullName>
            </value>
            <value>
                <fullName>Contract Consolidation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>