sfdx-source/force-app/main/default/objects/Opportunity/fields/Opt_In_Opt_Out_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Opt_Out_Response_Time__c</fullName>
    <description>LEM-2350: This field will be used to capture the number of days with in which Merchant has responded for Opt-In/Opt-Out.</description>
    <label>Opt-In/Opt-Out Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>