sfdx-source/force-app/main/default/objects/Opportunity/fields/Opt_Out_Save_Period__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Save_Period__c</fullName>
    <description>LEM-2350: This field will be used to capture the number of days with in which Merchant has responded for Opt-Out.</description>
    <label>Opt-Out Save Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>