sfdx-source/force-app/main/default/objects/Opportunity/fields/ortoo_qra__Q_assign_Last_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__Q_assign_Last_Assigned_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <inlineHelpText>Most recent date Opportunity was assigned to a Rep via qassign</inlineHelpText>
    <label>Q-assign Last Assigned Date</label>
    <type>DateTime</type>
</CustomField>