sfdx-source/force-app/main/default/objects/Opportunity/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <description>LEM-833: It indicates Owner Full Name of the Opportunity record.
    It will be used for syncing Owner Full Name to Lemonade Opportunities External Object in Figment instance.</description>
    <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>