sfdx-source/force-app/main/default/objects/Opportunity/fields/Path_to_Closure__c.field-meta.xml
<CustomField>
    <fullName>Path_to_Closure__c</fullName>
    <description>LEM-408: This field is to describe how this deal can be won, including next steps or potential blockers that need to be resolved.</description>
    <inlineHelpText>Add details here that describe how this deal can be won, including next steps or potential blockers that need to be resolved.</inlineHelpText>
    <label>Path to Closure</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>