sfdx-source/force-app/main/default/objects/Opportunity/fields/Pitch_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Amount__c</fullName>
    <description>LEM-339: Field describes  the initial pitch amount for ads or promos products</description>
    <inlineHelpText>Indicates the initial pitch amount for ads or promos products.</inlineHelpText>
    <label>Pitch Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>