sfdx-source/force-app/main/default/objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14152: It is used to reference the primary contact associated with OCR.</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Primary OCR Contact)</relationshipLabel>
    <relationshipName>Opportunities_Primary_OCR_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>