sfdx-source/force-app/main/default/objects/Opportunity/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14152: It is used to store primary OCR contact name.</description>
    <formula>Primary_Contact__r.Contact_Name__c</formula>
    <label>Primary Contact Name</label>
    <type>Text</type>
</CustomField>