sfdx-source/force-app/main/default/objects/Opportunity/fields/Primary_Routing_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Primary_Routing_Assigned__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>LEM-23558: It determines whether Q-assign routed the Opportunity to user or not.</description>
    <label>Primary Routing Assigned</label>
    <type>Checkbox</type>
</CustomField>