sfdx-source/force-app/main/default/objects/Opportunity/fields/Projected_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Launch_Date__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Created as part of LEM-9605</description>
    <label>Projected Launch Date</label>
    <type>Date</type>
</CustomField>