sfdx-source/force-app/main/default/objects/Opportunity/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <description>LEM-3499: Captures the Purchase Order associated with the Opportunity.</description>
    <label>Purchase Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>