sfdx-source/force-app/main/default/objects/Opportunity/fields/Quarterly_Rate_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Rate_Threshold__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15584: Tracking Quarterly Rate and Signing Bonus Threshold for Canada</description>
    <inlineHelpText>Indicates the lowest commission rate that can be offered to the Mx that will be auto approved.</inlineHelpText>
    <label>Quarterly Rate Threshold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto_13%</fullName>
            </value>
            <value>
                <fullName>Auto_13.5%</fullName>
            </value>
            <value>
                <fullName>Auto_14%</fullName>
            </value>
            <value>
                <fullName>Auto_14.5%</fullName>
            </value>
            <value>
                <fullName>Auto_15%</fullName>
            </value>
            <value>
                <fullName>Auto_15.5%</fullName>
            </value>
            <value>
                <fullName>Auto_16%</fullName>
            </value>
            <value>
                <fullName>Auto_17%</fullName>
            </value>
            <value>
                <fullName>Auto_18%</fullName>
            </value>
            <value>
                <fullName>Auto_18.5%</fullName>
            </value>
            <value>
                <fullName>Auto_19%</fullName>
            </value>
            <value>
                <fullName>Auto_20%</fullName>
            </value>
            <value>
                <fullName>Auto_21%</fullName>
            </value>
            <value>
                <fullName>Auto_22%</fullName>
            </value>
            <value>
                <fullName>Auto_23%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>