sfdx-source/force-app/main/default/objects/Opportunity/fields/Quarterly_Signing_Bonus_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Signing_Bonus_Threshold__c</fullName>
    <description>LEM-15584: Tracking Quarterly Rate and Signing Bonus Threshold for Canada</description>
    <inlineHelpText>Indicates the highest signing bonus that can be offered to the Mx that will be auto approved.</inlineHelpText>
    <label>Quarterly Signing Bonus Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>