sfdx-source/force-app/main/default/objects/Opportunity/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <description>LEM-2350: This field will be used to capture the party which is responsible for creating the Opportunity.</description>
    <label>Responsible Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DoorDash</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>