sfdx-source/force-app/main/default/objects/Opportunity/fields/RESSMO_Link__c.field-meta.xml
<CustomField>
    <fullName>RESSMO_Link__c</fullName>
    <description>LEM-16273</description>
    <label>RESSMO Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>