sfdx-source/force-app/main/default/objects/Opportunity/fields/SDR_Assisted__c.field-meta.xml
<CustomField>
    <fullName>SDR_Assisted__c</fullName>
    <description>LEM-16065: Determine the date when a meeting is held by SDR</description>
    <inlineHelpText>Indicates the Date of a held meeting that was scheduled by a SDR</inlineHelpText>
    <label>SDR Assisted</label>
    <type>Date</type>
</CustomField>