sfdx-source/force-app/main/default/objects/Opportunity/fields/SDR_Assisted_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>SDR_Assisted_Task_Id__c</fullName>
    <inlineHelpText>Indicates the Event ID of a held meeting that was scheduled by a SDR.</inlineHelpText>
    <label>SDR Assisted Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>