sfdx-source/force-app/main/default/objects/Opportunity/fields/SDR_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>SDR_Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16063: It Indicates the SDR that is currently working this Opportunity.</description>
    <inlineHelpText>Indicates the SDR that is currently working this Opportunity</inlineHelpText>
    <label>SDR Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>