sfdx-source/force-app/main/default/objects/Opportunity/fields/SDR_Touch_Required__c.field-meta.xml
<CustomField>
    <fullName>SDR_Touch_Required__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13541: It is used to check if SDR touch is required for this opportunity.</description>
    <inlineHelpText>Indicates the need for the SDR touch on the SMB opportunity.</inlineHelpText>
    <label>SDR Touch Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>