sfdx-source/force-app/main/default/objects/Opportunity/fields/SDR_Unable_to_Connect_with_Mx_Date__c.field-meta.xml
<CustomField>
    <fullName>SDR_Unable_to_Connect_with_Mx_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16066: It is used to indicate the date in which the SDR completed their last outreach to connect with the Mx.</description>
    <inlineHelpText>Indicates the date in which the SDR completed their last outreach to connect with the Mx after the leadership specified number of attempts</inlineHelpText>
    <label>SDR Unable to Connect with Mx Date</label>
    <type>Date</type>
</CustomField>