sfdx-source/force-app/main/default/objects/Opportunity/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2504,13476: It captures the Source that led to Opportunity creation. It helps in deciding if certain validations can be bypassed.</description>
    <inlineHelpText>This field can be populated during creation to indicate where opportunity data originated. It is also used to format opportunity names and helps decide if some validations should be applied or bypassed.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Mx Portal</fullName>
            </value>
            <value>
                <fullName>Nintex</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Selection Intel</fullName>
            </value>
            <value>
                <fullName>SSMO</fullName>
            </value>
            <value>
                <fullName>SSOB</fullName>
            </value>
            <value>
                <fullName>VSP Recommendation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>