sfdx-source/force-app/main/default/objects/Opportunity/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <description>LEM-23798: It is used to store the storeId received from self serve payload</description>
    <label>Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>