sfdx-source/force-app/main/default/objects/Opportunity/fields/Substage__c.field-meta.xml
<CustomField>
    <fullName>Substage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14697: It represents the Substage of Opportunity.</description>
    <label>Substage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Untouched</fullName>
            </value>
            <value>
                <fullName>Trying to Reach</fullName>
            </value>
            <value>
                <fullName>DM Identified</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Business Considerations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>