sfdx-source/force-app/main/default/objects/Opportunity/fields/Total_Count_of_Calls_and_Emails__c.field-meta.xml
<CustomField>
    <fullName>Total_Count_of_Calls_and_Emails__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13529: It is used to display the total number of calls and emails</description>
    <formula>BLANKVALUE(Count_of_Calls_Outbound_Inbound__c, 0) + BLANKVALUE(Count_of_Emails_Sent__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Count of Calls and Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>