sfdx-source/force-app/main/default/objects/Opportunity/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <description>LEM-14588: It is used to capture the unique identifier from SSMO payload .</description>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>