sfdx-source/force-app/main/default/objects/Opportunity/validationRules/ChurnSeverityRequiredWhenRetentionSubTyp.validationRule-meta.xml
<ValidationRule>
    <fullName>ChurnSeverityRequiredWhenRetentionSubTyp</fullName>
    <active>true</active>
    <description>LEM-14050 :  It validates that Churn Severity field is populated when Subtype is Retention.</description>
    <errorConditionFormula>AND(
      NOT($Permission.Bypass_Opportunity_Validation_Rules),
      ISPICKVAL( Opportunity_Sub_Type__c , &apos;Retention&apos;) ,
      ISBLANK(TEXT( Churn_Severity__c )),
      TEXT(Account.Segment__c) = $Label.AccountSegmentSMB,
      OR(
          AND (
                $Permission.Allow_Churn_Severity_Field_Update,
                $Profile.Name != $Label.System_Administrator
              ),
          $Profile.Name = $Label.System_Administrator
       )
    )</errorConditionFormula>
    <errorDisplayField>Churn_Severity__c</errorDisplayField>
    <errorMessage>Churn Severity is required when Sub Type = Retention. Please populate before saving.</errorMessage>
</ValidationRule>