sfdx-source/force-app/main/default/objects/Opportunity/validationRules/Contracting_Stage_Gate.validationRule-meta.xml
<ValidationRule>
    <fullName>Contracting_Stage_Gate</fullName>
    <active>true</active>
    <description>LEM-990: Add a Related Contract to the Opportunity before moving past Contracting Stage for users to view associated Contract at all times for the Closed-Won Opportunities.
LEM-9554: Contract Signed not necessary if Deal Type is Self-Serve</description>
    <errorConditionFormula>AND(
    
    NOT(ISPICKVAL( Deal_Type__c ,&quot;Self-Serve&quot;)),
    NOT($Permission.Bypass_Opportunity_Validation_Rules),
    TEXT(Source__c) != $Label.Source_Nintex,
    TEXT(Source__c) != $Label.Source_Product,
    NOT(
        TEXT(Deal_Type__c) = $Label.Opportunity_Lite
    ),
    TEXT(StageName) = $Label.Opportunity_Stage_Closed_Won,
    TEXT(Account.Type) &lt;&gt; $Label.Type_Franchisee,
    TEXT(SBQQ__PrimaryQuote__r.SBQQ__Status__c) != $Label.Quote_Contract_Signed,
    OR(
        Account.RecordType.DeveloperName =  $Label.BusinessAccountRecordTypeName,  
        Account.RecordType.DeveloperName =  $Label.Account_RecordType_ChannelPartner 
    )
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Please ensure the associated quote has a status of Contract Signed before marking the opportunity as Closed Won.</errorMessage>
</ValidationRule>